--- a/bower.json
+++ b/bower.json
@@ -21,10 +21,10 @@
   ],
   "dependencies": {
     "rdash-ui": "1.0.*",
-    "angular": "~1.2.21",
+    "angular": "~1.4.*",
     "angular-cookies": "~1.2.21",
     "angular-bootstrap": "~0.11.0",
-    "angular-ui-router": "^0.2.10",
+    "angular-ui-router": "^0.2.15",
     "bootstrap": "~3.2.0",
     "font-awesome": "~4.1.0",
     "papaparse": "~4.1.2"
