--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "rdash-angular",
   "version": "0.0.1",
   "author": "Elliot Hesp",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:ProtonMail/rdash-angular.git"
+  },
+  "license": "MIT",
   "contributors": [
     "Leonel Samayoa <leonel.e.samayoa@gmail.com> (http://gobliip.com)",
     "Ricardo Pascua <rdpascua@outlook.com>"
   ],
   "devDependencies": {
     "bower": "^1.3.9",
-    "gulp": "~3.9.0",
     "gulp-connect": "^2.0.6",
     "gulp-usemin": "^0.3.7",
     "gulp-watch": "^0.6.9",
