--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
     "bower": "^1.8.0",
+    "gulp-if": "^2.0.2",
     "gulp-babel": "^6.1.2",
     "gulp-connect": "^5.0.0",
     "gulp-usemin": "^0.3.26",
