--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
     "bower": "^1.8.0",
-    "gulp-if": "^2.0.2",
     "gulp-babel": "^6.1.2",
+    "gulp-clean-css": "^2.0.13",
+    "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
+    "gulp-debug": "^3.0.0",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-if": "^2.0.2",
+    "gulp-less": "^3.3.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.9.1",
+    "gulp-uglify": "^2.0.0",
     "gulp-usemin": "^0.3.26",
     "gulp-watch": "^4.3.11",
     "gulp-wrap": "^0.13.0",
-    "gulp-clean-css": "^2.0.13",
-    "gulp-uglify": "^2.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-less": "^3.3.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-htmlmin": "^3.0.0",
-    "gulp-debug": "^3.0.0",
     "pump": "^1.0.1"
   },
   "dependencies": {
