--- a/bower.json
+++ b/bower.json
@@ -19,13 +19,15 @@
     "angular-cookies": "~1.4.*",
     "angular-bootstrap": "~0.11.0",
     "angular-ui-router": "^0.2.15",
+    "angular-resource": "^1.4.10",
     "bcryptjs": "~2.3.0",
     "bootstrap": "~3.3.6",
     "font-awesome": "~4.1.0",
     "papaparse": "~4.1.2",
     "openpgp": "^2.3.5",
     "underscore": "~1.8.3",
-    "es6-promise": "^4.0.5"
+    "es6-promise": "^4.0.5",
+    "angular-gettext": "^2.2.1"
   },
   "repository": {
     "type": "git",
