--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "underscore": "~1.8.3",
     "es6-promise": "^4.0.5",
     "angular-gettext": "^2.2.1",
-    "angular-notify": "EpokK/angular-notify#^2.5.0"
+    "angular-notify": "EpokK/angular-notify#^2.5.0",
+    "jquery": "^3.1.1"
   },
   "repository": {
     "type": "git",
