Fix transition superseded errors

--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,7 @@
     "url": "https://github.com/rdash/rdash-angular"
   },
   "resolutions": {
-    "angular": "1.6.1"
+    "angular": "1.6.1",
+    "angular-ui-router": "^0.3.2"
   }
 }
