--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "angular-bootstrap": "~0.11.0",
     "angular-cookies": "~1.4.*",
     "angular-gettext": "^2.2.1",
-    "angular-notify": "EpokK/angular-notify#^2.5.0",
+    "angular-notify": "EpokK/angular-notify#master",
     "angular-resource": "^1.4.10",
     "angular-ui-router": "^0.2.15",
     "angular": "^1.6.1",
@@ -36,7 +36,7 @@
     "url": "https://github.com/rdash/rdash-angular"
   },
   "resolutions": {
-    "angular": "1.6.1",
+    "angular": "1.5.9",
     "angular-ui-router": "^0.3.2"
   }
 }
