--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,8 @@
     "angular-gettext": "^2.2.1",
     "angular-notify": "EpokK/angular-notify#master",
     "angular-resource": "^1.4.10",
-    "angular-ui-router": "^0.2.15",
-    "angular": "^1.6.1",
+    "angular-ui-router": "^0.3.2",
+    "angular": "1.5.*",
     "bcryptjs": "~2.3.0",
     "bootstrap": "~3.3.6",
     "es6-promise": "^4.0.5",
@@ -36,7 +36,6 @@
     "url": "https://github.com/rdash/rdash-angular"
   },
   "resolutions": {
-    "angular": "1.5.9",
-    "angular-ui-router": "^0.3.2"
+    "angular": "1.5.*"
   }
 }
