Add a middleware for connect to allow html5mode

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pump": "^1.0.1"
   },
   "dependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "serve-static": "^1.11.1"
   }
 }
