Auto logged in the user on refresh

--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-cached": "^1.1.1",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-remember": "^0.3.1",
+    "gulp-sourcemaps": "^1.10.1",
     "serve-static": "^1.11.1"
   }
 }
