--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -2,25 +2,34 @@
     "indent_char": " ",
     "indent_size": 4,
     "indent_with_tabs": false,
+    "eol": "\n",
     "end_with_newline": true,
+    "indent_level": 0,
     "preserve_newlines": true,
     "max_preserve_newlines": 1,
-    "indent_level": 0,
+    "wrap_line_length": 0,
     "html": {
         "indent_inner_html": false,
         "brace_style": "expand",
         "indent_scripts": "normal",
-        "wrap_line_length": 0,
         "wrap_attributes": "force-expand-multiline",
         "unformatted": [],
         "content_unformatted": [],
         "extra_liners": ["head", "body", "/html", "div", "table"]
     },
-    "css": {
-    },
+    "css": {},
     "js": {
-        "jslint_happy": true
+        "space_in_paren": false,
+        "space_in_empty_paren": false,
+        "jslint_happy": true,
+        "space_after_anon_function": true,
+        "brace_style": "end-expand",
+        "break_chained_methods": false,
+        "keep_array_indentation": false,
+        "unescape_strings": false,
+        "e4x": false,
+        "comma_first": false,
+        "operator_position": "before-newline"
     },
-    "sql": {
-    }
+    "sql": {}
 }
