--- a/bower.json
+++ b/bower.json
@@ -19,13 +19,13 @@
     "angular-cookies": "~1.4.*",
     "angular-gettext": "^2.2.1",
     "angular-notify": "EpokK/angular-notify#master",
-    "angular-resource": "^1.4.10",
+    "angular-resource": "^1.6.1",
     "angular-ui-router": "^0.3.2",
     "angular": "1.5.*",
     "bcryptjs": "~2.3.0",
-    "bootstrap": "~3.3.6",
+    "bootstrap": "^3.3.7",
     "es6-promise": "^4.0.5",
-    "font-awesome": "~4.1.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "openpgp": "^2.3.5",
     "papaparse": "~4.1.2",
